# DBricks

./: .gitignore  configure.ac
doc/: event.rst
logging/: logging.cxx
src/: Makefile.am
src/diagram/: Archiver.hxx  BoxShape.cxx  BoxShape.hxx  BoxedCustomShape.cxx  BoxedCustomShape.hxx  BoxedShape.cxx  BoxedShape.hxx  BuiltinChanges.hxx  CairoRenderer.cxx  CairoRenderer.hxx  Change.hxx  Clipboard.hxx  Color.cxx  Color.hxx  Connector.cxx  Connector.hxx  CreateContext.cxx  CreateContext.hxx  CustomShape.cxx  CustomShape.hxx  Desktop.cxx  Desktop.hxx  Diagram.cxx  Diagram.hxx  DiagramArchiver.hxx  DiagramObserver.hxx  DispatchContext.cxx  DispatchContext.hxx  Display.cxx  Display.hxx  EllipseShape.cxx  EllipseShape.hxx  EventContext.hxx  Font.hxx  GroupShape.cxx  GroupShape.hxx  Handle.cxx  Handle.hxx  History.hxx  IRenderer.cxx  (+50 more)
src/geom/: Point.hxx  Rect.hxx  computation.hxx
src/logging/: Makefile.am  logging.cxx  logging.hxx
src/shapes/flowchart/: merge.shape  predefined_process.shape  terminal.shape
src/sml/: ISerializer.hxx  Makefile.am  Sml.cxx  Sml.hxx
src/ssexp/: Makefile.am  ssexp.cxx  ssexp.h
src/util/: assert.hxx  bit.hxx  ecl.hxx  stl.hxx  string.hxx
util/: assert.hxx  stl.hxx
